[tool.poetry]
name = "mario-rl"
version = "0.1.0"
description = ""
authors = ["ziegnes <2195609+jingz-dev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gym-super-mario-bros = "7.4.0"
tensordict = "0.3.0"
torchrl = "0.3.0"
torch = "2.2.0"
torchvision = "0.17.0"
torchaudio = "2.2.0"
ipykernel = "^6.29.5"
matplotlib = "3.5.3"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
